<resources>
    <string name="app_name">App Medecin&amp;Infirmiers</string>
    <string name="title_home">Home</string>
    <string name="title_list_patients">Patients</string>
    <string name="title_profile">Profile</string>
    <string name="text_authentification">S\'authentifier</string>
    <string name="text_connect">Se connecter</string>
    <string name="text_pasCompte">Vous n\'avez pas de compte?</string>
    <string name="text_creerCompte">Créer mon compte</string>
    <string name="text_ajoutPatient">Ajouter un patient</string>
    <string name="text_email">Email</string>
    <string name="text_genre">Genre</string>
    <string name="text_specialisation">Specialisation</string>
    <string name="text_password">Mot de passe</string>
    <string name="text_nomComplet">Nom complet</string>
    <string name="text_profession">Profession</string>
    <string name="text_age">Age</string>
    <string name="text_passwordconfirmed">Confirmer mot de passe</string>
    <string name="text_dejacompte">Vous avez déjà un compte?</string>
    <string name="text_reinitialiser">Réinitialiser mon mot de passe</string>
    <string name="text_passwordoblie">Mot de passe oublié?</string>
    <string name="text_intro">Faites la suivi de vos patients via l\'application e-patient</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!--onboarding designs-->
    <string name="onboardingWelcomeContent">Hospinet - Une plateforme de discussion sécurisée pour les professionnels de santé.</string>
    <string name="onboardingSpinWinContent">Rejoignez la communauté Hospinet et échangez en toute confidentialité avec vos collègues sur la santé de vos patients. </string>
    <string name="onboardingRecommenderContent">Hospinet : Votre espace de dialogue dédié aux soins de santé.</string>
    <string name="onboarding_welcome_3">Espace dédié</string>
    <string name="onboarding_welcome_2">Rejoignez nous</string>
    <string name="onboarding_welcome_1">Welcome</string>
    <string name="login_bienvenu">Bienvenue sur Hospinet, votre réseau de discussion pour une meilleure prise en charge des patients.</string>
</resources>